# QuickSnag

./: .gitignore  package-lock.json  package.json
backend/: Cargo.toml  main.py
backend/src/: main.rs
backend/src/routes/: download.rs
backend/src/utils/: youtube.rs
css/: main.css
js/: main.js
src/: main.html
