[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html\


[dependencies]
axum = "0.6.20"
pyo3 = {version = "0.20.0",  features = ["auto-initialize"] }
reqwest = {version = "0.11.22", features = ["stream"] }
serde = {version = "1.0.193", features = ["derive"] }
tokio = {version = "1.34.0", features = ["full"] }
tower-http = {version = "0.4.2",  features = ["cors"] }
tower-livereload = "0.8.2"
tracing-subscriber = "0.3.18"
